--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -4,19 +4,25 @@ export interface Props extends astroHTML.JSX.AnchorHTMLAttributes {}
 const { href, class: className, ...props } = Astro.props;
 
 const { pathname } = Astro.url;
-const isActive = href === pathname || href === pathname.replace(/\/$/, '');
+const isActive = href === pathname || href === pathname.replace(/\/$/, "");
 ---
 
-<a href={href} class:list={[className, { active: isActive }]} {...props}>
-	<slot />
-</a>
+<div class="text-sm font-semibold leading-6 text-gray-900">
+  <a href={href} class="text-sm  font-semibold leading-6 text-gray-900"
+    ><slot /></a
+  >
+  <!-- <a href={href} class:list={[className, { active: isActive }]} {...props}>
+    <slot />
+  </a> -->
+</div>
+
 <style>
-	a {
-		display: inline-block;
-		text-decoration: none;
-	}
-	a.active {
-		font-weight: bolder;
-		text-decoration: underline;
-	}
+  a {
+    display: inline-block;
+    text-decoration: none;
+  }
+  a.active {
+    font-weight: bolder;
+    text-decoration: underline;
+  }
 </style>
