--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,50 +1,94 @@
 ---
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import BaseHead from "../components/BaseHead.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 ---
 
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-	</head>
-	<body>
-		<Header title={SITE_TITLE} />
-		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
-			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
-			</p>
-			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
-			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
-			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/pages/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-			</ul>
-			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-			</p>
-		</main>
-		<Footer />
-	</body>
+  <head>
+    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+  </head>
+  <body>
+    <Header title={SITE_TITLE} />
+    <div class="isolate bg-white max-w-full max-h-full">
+      <main>
+        <div class="relative px-6">
+          <div class="mx-auto max-w-2xl py-8">
+            <h1
+              class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl"
+            >
+              🧑‍🚀 Hello, Astronaut!
+            </h1>
+            <p class="mt-6 text-lg leading-8 text-gray-600">
+              Welcome to the official <a
+                class="text-blue-600 visited:text-purple-600"
+                href="https://astro.build/">Astro</a
+              >
+              blog starter template. This template serves as a lightweight, minimally-styled
+              starting point for anyone looking to build a personal website, blog,
+              or portfolio with Astro.
+            </p>
+            <p class="text-lg leading-8 text-gray-600">
+              This template comes with a few integrations already configured in
+              your
+              <code>astro.config.mjs</code> file. You can customize your setup with
+              <a
+                class="text-blue-600 visited:text-purple-600"
+                href="https://astro.build/integrations">Astro Integrations</a
+              > to add tools like Tailwind, React, or Vue to your project.
+            </p>
+
+            <p class="mt-3 text-lg leading-8 text-gray-600">
+              Here are a few ideas on how to get started with the template:
+            </p>
+            <div class="bg-orange-200 p-8 border-2 border-amber-700">
+              <ul class="list-disc text-start text-lg leading-8 text-gray-600">
+                <li>Edit this page in <code>src/pages/index.astro</code></li>
+                <li>
+                  Edit the site header items in <code
+                    >src/components/Header.astro</code
+                  >
+                </li>
+                <li>
+                  Add your name to the footer in <code
+                    >src/components/Footer.astro</code
+                  >
+                </li>
+                <li>
+                  Check out the included blog posts in <code
+                    >src/pages/blog/</code
+                  >
+                </li>
+                <li>
+                  Customize the blog post page layout in <code
+                    >src/layouts/BlogPost.astro</code
+                  >
+                </li>
+              </ul>
+            </div>
+            <p class="mt-6 text-lg leading-8 text-gray-600">
+              Have fun! If you get stuck, remember to <a
+                href="https://docs.astro.build/"
+                >read the docs
+              </a> or <a
+                class="text-blue-600 visited:text-purple-600"
+                href="https://astro.build/chat">join us on Discord</a
+              > to ask questions.
+            </p>
+            <p class="text-lg leading-8 text-gray-600">
+              Looking for a blog template with a bit more personality? Check out
+              <a
+                class="text-blue-600 visited:text-purple-600"
+                href="https://github.com/Charca/astro-blog-template"
+                >astro-blog-template
+              </a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
+            </p>
+          </div>
+        </div>
+      </main>
+    </div>
+    <Footer />
+  </body>
 </html>
