--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,16 +4,17 @@
   License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
  */
 body {
-	font-family: Verdana, sans-serif;
+	/* font-family: Verdana, sans-serif; */
 	margin: auto;
-	padding: 20px;
-	max-width: 65ch;
+	/* padding: 20px; */
+	/* max-width: 65ch; */
 	text-align: left;
 	background-color: #fff;
 	word-wrap: break-word;
 	overflow-wrap: break-word;
 	line-height: 1.5;
 	color: #444;
+	background-color: rgb(244 244 245);
 }
 h1,
 h2,
